--- a/exercises/c++/03_arrays_and_vectors/Makefile
+++ b/exercises/c++/03_arrays_and_vectors/Makefile
@@ -3,7 +3,8 @@ CXXFLAGS = -Wall -Wextra -g -std=c++11
 
 SRC = transpose.cc \
       arg_line.cc \
-	  mean_median.cc
+	  mean_median.cc \
+	  repetition.cc
 
 EXE = $(SRC:.cc=.x)
 
