ex 10 c++ ex1.2 completed

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ lectures/c++/10_mixing/03_cpp_from_c/02_class/cpp-main
 lectures/c++/10_mixing/04_libdl/main
 lectures/c++/10_mixing/06_fortran/c-exe
 lectures/c++/10_mixing/06_fortran/cpp-exe
+exercises/c++/10_symbols/hello
